--- a/VidCoder/Resources/CommonRes.tr.resx
+++ b/VidCoder/Resources/CommonRes.tr.resx
@@ -117,98 +117,139 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Anamorphic_Custom" xml:space="preserve">
-    <value>Personalizar</value>
+  <data name="AboutLicense" xml:space="preserve">
+    <value>Bu program ücretsiz bir yazılımdır; Ücretsiz Yazılım Vakfı (Free Software Foundation) tarafından yayımlandığı gibi, GNU Genel Kamu Lisansı (General Public License) sürüm 2 şartları altında yeniden dağıtabilir ve/veya değiştirebilirsiniz.
+
+Bu program faydalı olacağı umuduyla dağıtılmaktadır ama HERHANGİ BİR GARANTİSİ YOKTUR; BELİRLİ BİR AMACA veya TİCARETE UYGUNLUĞUNUN dolaylı bile garantisi yoktur. Daha fazla ayrıntı için GNU General Public License’a bakın.
+
+GNU General Public License kopyası bu programa dahil edilmiştir.</value>
   </data>
-  <data name="Anamorphic_Loose" xml:space="preserve">
-    <value>Loose</value>
+  <data name="BurnedSubtitleToolTip" xml:space="preserve">
+    <value>Altyazıyı resmin üzerine yaz. Gömülü altyazılı film izlenirken altyazı devre dışı bırakılamaz.</value>
   </data>
-  <data name="Anamorphic_None" xml:space="preserve">
-    <value>Ninguno</value>
+  <data name="DefaultSubtitleToolTip" xml:space="preserve">
+    <value>Bu altyazıyı varsayılan olarak seç. Çalma esnasında başka bir altyazı seçilene kadar bu altyazı gösterilecektir.</value>
   </data>
-  <data name="Anamorphic_Strict" xml:space="preserve">
-    <value>Strict</value>
+  <data name="ForcedSubtitleToolTip" xml:space="preserve">
+    <value>Sadece zorunlu altyazıları göster. Bu genellikle az miktarda bulunan yabancı konuşmalar için kullanılır.</value>
   </data>
-  <data name="Custom" xml:space="preserve">
-    <value>Personalizar</value>
+  <data name="OffsetSubtitleToolTip" xml:space="preserve">
+    <value>Seçili altyazıların gösterimini öne  alma ya da  geciktirme süresi miktarı.</value>
   </data>
-  <data name="Decomb_Bob" xml:space="preserve">
-    <value>Bob</value>
+  <data name="QueueColumnNameRange" xml:space="preserve">
+    <value>Aralık</value>
+    <comment>The label for the queue column that specifies what portion of the video to encode. (Like 25:23 - 37:50)</comment>
   </data>
-  <data name="Decomb_Fast" xml:space="preserve">
-    <value>Fast</value>
+  <data name="QueueColumnNameDestination" xml:space="preserve">
+    <value>Hedef</value>
+  </data>
+  <data name="QueueColumnNameSource" xml:space="preserve">
+    <value>Kaynak</value>
+  </data>
+  <data name="QueueColumnNameTitle" xml:space="preserve">
+    <value>Başlık</value>
+  </data>
+  <data name="QueueColumnNameAudioQuality" xml:space="preserve">
+    <value>Ses Kalitesi</value>
+  </data>
+  <data name="QueueColumnNameAudioEncoder" xml:space="preserve">
+    <value>Ses Kodlayıcı</value>
+  </data>
+  <data name="QueueColumnNameVideoEncoder" xml:space="preserve">
+    <value>Video Kodlayıcı</value>
+  </data>
+  <data name="QueueColumnNameVideoQuality" xml:space="preserve">
+    <value>Video Kalitesi</value>
+  </data>
+  <data name="QueueEtaToolTip" xml:space="preserve">
+    <value>Kuyruktaki tüm işleri tamamlamak için kalan tahmini süre.</value>
+  </data>
+  <data name="QueueColumnNameDuration" xml:space="preserve">
+    <value>Süre</value>
+  </data>
+  <data name="ForeignAudioSearchToolTip" xml:space="preserve">
+    <value>Altyazı içerisindeki muhtemel yabancı diyalog parçalarını arar. Özellikle kendi ana dilinizde olan filmler için uygundur.</value>
   </data>
   <data name="Default" xml:space="preserve">
-    <value>Predeterminado</value>
+    <value>Varsayılan</value>
+    <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
-  <data name="Deinterlace_Bob" xml:space="preserve">
-    <value>Bob</value>
-    <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
+  <data name="Custom" xml:space="preserve">
+    <value>Özel</value>
+    <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
-  <data name="Deinterlace_Fast" xml:space="preserve">
-    <value>Fast</value>
+  <data name="Browse" xml:space="preserve">
+    <value>Gözat...</value>
   </data>
-  <data name="Deinterlace_Slow" xml:space="preserve">
-    <value>Slow</value>
+  <data name="Delete" xml:space="preserve">
+    <value>Sil</value>
   </data>
-  <data name="Deinterlace_Slower" xml:space="preserve">
-    <value>Slower</value>
+  <data name="PreviewLabel" xml:space="preserve">
+    <value>Önizleme</value>
   </data>
-  <data name="DenoisePreset_Light" xml:space="preserve">
-    <value>Ligero</value>
-  </data>
-  <data name="DenoisePreset_Medium" xml:space="preserve">
-    <value>Medio</value>
-  </data>
-  <data name="DenoisePreset_Strong" xml:space="preserve">
-    <value>Intenso</value>
-  </data>
-  <data name="DenoisePreset_Ultralight" xml:space="preserve">
-    <value>Ultrasuave</value>
-  </data>
-  <data name="DenoiseTune_Animation" xml:space="preserve">
-    <value>Animación</value>
-  </data>
-  <data name="DenoiseTune_Film" xml:space="preserve">
-    <value>Película</value>
-  </data>
-  <data name="DenoiseTune_Grain" xml:space="preserve">
-    <value>Grano</value>
-  </data>
-  <data name="DenoiseTune_HighMotion" xml:space="preserve">
-    <value>Alto movimiento</value>
-  </data>
-  <data name="Denoise_HQDN3D" xml:space="preserve">
-    <value>HQDN3D</value>
-  </data>
-  <data name="Denoise_NLMeans" xml:space="preserve">
-    <value>Promedio no local (NL-Means)</value>
-  </data>
-  <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
-    <value>No hacer nada</value>
-  </data>
-  <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
-    <value>Expulsar {0}:</value>
-  </data>
-  <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
-    <value>Log off</value>
-  </data>
-  <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
-    <value>Apagar</value>
-  </data>
-  <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
-    <value>Suspender</value>
+  <data name="Automatic" xml:space="preserve">
+    <value>Otomatik</value>
   </data>
   <data name="Off" xml:space="preserve">
-    <value>Desactivado</value>
+    <value>Kapalı</value>
+    <comment>Usually used in settings, when there is a default option. For example for Decomb there is Off, Default, Fast, Bob and Custom.</comment>
   </data>
-  <data name="VideoRangeType_Chapters" xml:space="preserve">
-    <value>Capitulos</value>
+  <data name="All" xml:space="preserve">
+    <value>Tümü</value>
   </data>
-  <data name="VideoRangeType_Frames" xml:space="preserve">
-    <value>Fotogramas</value>
+  <data name="StreamChoice" xml:space="preserve">
+    <value>Stream {0}</value>
+    <comment>Used in the encoding settings dialog to mark which audio stream an audio encoding is targeting. By default the encoding works on all streams but you can target it to affect only the first stream, in which case it would label it "Stream 1"</comment>
   </data>
-  <data name="VideoRangeType_Seconds" xml:space="preserve">
-    <value>Intervalo de tiempo</value>
+  <data name="Ok" xml:space="preserve">
+    <value>Tamam</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>İptal</value>
+  </data>
+  <data name="Disabled" xml:space="preserve">
+    <value>Devre Dışı</value>
+  </data>
+  <data name="Remove" xml:space="preserve">
+    <value>Kaldır</value>
+  </data>
+  <data name="Copy" xml:space="preserve">
+    <value>Kopyala</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Evet</value>
+  </data>
+  <data name="No" xml:space="preserve">
+    <value>Hayır</value>
+  </data>
+  <data name="CouldNotAccessDirectoriesError" xml:space="preserve">
+    <value>Aşağıdaki dizinlere erişilemedi:</value>
+  </data>
+  <data name="None" xml:space="preserve">
+    <value>Hiçbiri</value>
+  </data>
+  <data name="Succeeded" xml:space="preserve">
+    <value>Başarılı Oldu</value>
+  </data>
+  <data name="Failed" xml:space="preserve">
+    <value>Başarısız Oldu</value>
+  </data>
+  <data name="FilePickerExtTemplate" xml:space="preserve">
+    <value>{0} Dosya</value>
+  </data>
+  <data name="QueueColumnNamePreset" xml:space="preserve">
+    <value>Hazır Ayar</value>
+  </data>
+  <data name="Success" xml:space="preserve">
+    <value>Başarılı</value>
+  </data>
+  <data name="ConfirmDialogTitle" xml:space="preserve">
+    <value>Onayla</value>
+  </data>
+  <data name="FileFailureErrorMessage" xml:space="preserve">
+    <value>Dosya işlemi tamamlanamadı.</value>
+  </data>
+  <data name="FileFailureErrorTitle" xml:space="preserve">
+    <value>Dosya işlemi hatası</value>
   </data>
 </root>
