--- a/VidCoder/Resources/EncodeDetailsRes.tr.resx
+++ b/VidCoder/Resources/EncodeDetailsRes.tr.resx
@@ -99,49 +99,49 @@
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
 	<data name="EncodeDetailsWindowTitle" xml:space="preserve">
-    <value>Detalles de codificacion</value>
+    <value>Kodlama İşlemi Detayları</value>
   </data>
 	<data name="QueueSectionHeader" xml:space="preserve">
-    <value>Cola</value>
+    <value>Görev Sıralaması</value>
   </data>
 	<data name="ScanPassLabel" xml:space="preserve">
-    <value>Pasada de escaneado:</value>
+    <value>Tarama geçişi:</value>
   </data>
 	<data name="FirstPassLabel" xml:space="preserve">
-    <value>Primera pasada:</value>
+    <value>İlk geçiş:</value>
   </data>
 	<data name="SecondPassLabel" xml:space="preserve">
-    <value>Segunda pasada:</value>
+    <value>İkinci geçiş:</value>
   </data>
 	<data name="EncodePassLabel" xml:space="preserve">
-    <value>Pasada codificando:</value>
+    <value>Kodlama geçişi:</value>
   </data>
 	<data name="JobLabel" xml:space="preserve">
-    <value>Trabajo:</value>
+    <value>Görev:</value>
   </data>
 	<data name="ProgressLabel" xml:space="preserve">
-    <value>Progreso:</value>
+    <value>İlerleme durumu:</value>
   </data>
 	<data name="ElapsedTimeLabel" xml:space="preserve">
-    <value>Tiempo transcurrido:</value>
+    <value>Geçen süre:</value>
   </data>
 	<data name="EtaLabel" xml:space="preserve">
-    <value>ETA:</value>
+    <value>TAHMİNİ TAMAMLANMA SÜRESİ:</value>
   </data>
 	<data name="FileProgressLabel" xml:space="preserve">
-    <value>Progreso del archivo:</value>
+    <value>Dosya ilerleme durumu:</value>
     <comment>Label on the encode details window for % progress on the current file.</comment>
   </data>
 	<data name="FileSizeLabel" xml:space="preserve">
-    <value>Tamaño del archivo:</value>
+    <value>Dosya Boyutu:</value>
     <comment>Label for current file size on encode details window.</comment>
   </data>
 	<data name="CurrentFpsLabel" xml:space="preserve">
-    <value>FPS actuales:</value>
+    <value>Mevcut kare/sn:</value>
     <comment>Label for the current encoding rate in frames per second.</comment>
   </data>
 	<data name="AverageFpsLabel" xml:space="preserve">
-    <value>FPS promedio:</value>
+    <value>Ortalama kare/sn:</value>
     <comment>Label for the average encoding rate in frames per second.</comment>
   </data>
 </root>
