--- a/VidCoder/Resources/PreviewRes.tr.resx
+++ b/VidCoder/Resources/PreviewRes.tr.resx
@@ -117,98 +117,70 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Anamorphic_Custom" xml:space="preserve">
-    <value>Personalizar</value>
+  <data name="PlaySourceButton" xml:space="preserve">
+    <value>Kaynak Videoyu Oynat</value>
   </data>
-  <data name="Anamorphic_Loose" xml:space="preserve">
-    <value>Loose</value>
+  <data name="EncodePreviewClipButton" xml:space="preserve">
+    <value>Önizleme Klibi Kodla</value>
   </data>
-  <data name="Anamorphic_None" xml:space="preserve">
-    <value>Ninguno</value>
+  <data name="EncodePreviewClipToolTip" xml:space="preserve">
+    <value>Seçili sahneden küçük bir önizleme klibi kodlar ve izletir. Mevcut kodlama ayarlarını kullanır.</value>
   </data>
-  <data name="Anamorphic_Strict" xml:space="preserve">
-    <value>Strict</value>
+  <data name="GeneratingPreview" xml:space="preserve">
+    <value>Önizleme oluşturuluyor...</value>
   </data>
-  <data name="Custom" xml:space="preserve">
-    <value>Personalizar</value>
+  <data name="PlaySourceDisabledBluRayToolTip" xml:space="preserve">
+    <value>Blu-ray için kaynak önizleme-henüz desteklenmiyor.</value>
   </data>
-  <data name="Decomb_Bob" xml:space="preserve">
-    <value>Bob</value>
+  <data name="PlaySourceDisabledNoPlayerToolTip" xml:space="preserve">
+    <value>Desteklenen bir DVD oynatıcı bulunamadı. Bu özelliği kullanabilmek için VLC veya MPC-HC yükleyin.</value>
   </data>
-  <data name="Decomb_Fast" xml:space="preserve">
-    <value>Fast</value>
+  <data name="PlaySourceToolTip" xml:space="preserve">
+    <value>Kaynak videoyu çalar.</value>
   </data>
-  <data name="Default" xml:space="preserve">
-    <value>Predeterminado</value>
+  <data name="PreviewClipGenerationFailedMessage" xml:space="preserve">
+    <value>Önizleme klibi oluşturma işlemi başarısız oldu. Ayrıntılar için kayıt günlüğü penceresine bakabilirsiniz.</value>
   </data>
-  <data name="Deinterlace_Bob" xml:space="preserve">
-    <value>Bob</value>
-    <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
+  <data name="PreviewClipGenerationFailedTitle" xml:space="preserve">
+    <value>Önizleme klibi oluşturma işlemi başarısız oldu</value>
   </data>
-  <data name="Deinterlace_Fast" xml:space="preserve">
-    <value>Fast</value>
+  <data name="PreviewWindowTitleSimple" xml:space="preserve">
+    <value>Önizleme: {0}x{1}</value>
   </data>
-  <data name="Deinterlace_Slow" xml:space="preserve">
-    <value>Slow</value>
+  <data name="PreviewWindowTitleComplex" xml:space="preserve">
+    <value>Önizleme: Ekran {0}x{1} - Depolama {2}x{3}</value>
   </data>
-  <data name="Deinterlace_Slower" xml:space="preserve">
-    <value>Slower</value>
+  <data name="NoVideoSourceTitle" xml:space="preserve">
+    <value>Önizleme: Video kaynağı yok</value>
   </data>
-  <data name="DenoisePreset_Light" xml:space="preserve">
-    <value>Ligero</value>
+  <data name="Seconds" xml:space="preserve">
+    <value>saniye</value>
   </data>
-  <data name="DenoisePreset_Medium" xml:space="preserve">
-    <value>Medio</value>
+  <data name="PreviewDisplay_Corners" xml:space="preserve">
+    <value>Köşeler</value>
   </data>
-  <data name="DenoisePreset_Strong" xml:space="preserve">
-    <value>Intenso</value>
+  <data name="PreviewDisplay_FitToWindow" xml:space="preserve">
+    <value>Pencereye Sığdır</value>
   </data>
-  <data name="DenoisePreset_Ultralight" xml:space="preserve">
-    <value>Ultrasuave</value>
+  <data name="PreviewDisplay_OneToOne" xml:space="preserve">
+    <value>1:1</value>
   </data>
-  <data name="DenoiseTune_Animation" xml:space="preserve">
-    <value>Animación</value>
+  <data name="ViewLabel" xml:space="preserve">
+    <value>Görünüm:</value>
   </data>
-  <data name="DenoiseTune_Film" xml:space="preserve">
-    <value>Película</value>
+  <data name="TopMargin" xml:space="preserve">
+    <value>Üst Kenar Boşluğu</value>
   </data>
-  <data name="DenoiseTune_Grain" xml:space="preserve">
-    <value>Grano</value>
+  <data name="LeftMargin" xml:space="preserve">
+    <value>Sol Kenar Boşluğu</value>
   </data>
-  <data name="DenoiseTune_HighMotion" xml:space="preserve">
-    <value>Alto movimiento</value>
+  <data name="RightMargin" xml:space="preserve">
+    <value>Sağ Kenar Boşluğu</value>
   </data>
-  <data name="Denoise_HQDN3D" xml:space="preserve">
-    <value>HQDN3D</value>
+  <data name="BottomMargin" xml:space="preserve">
+    <value>Alt Kenar Boşluğu</value>
   </data>
-  <data name="Denoise_NLMeans" xml:space="preserve">
-    <value>Promedio no local (NL-Means)</value>
-  </data>
-  <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
-    <value>No hacer nada</value>
-  </data>
-  <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
-    <value>Expulsar {0}:</value>
-  </data>
-  <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
-    <value>Log off</value>
-  </data>
-  <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
-    <value>Apagar</value>
-  </data>
-  <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
-    <value>Suspender</value>
-  </data>
-  <data name="Off" xml:space="preserve">
-    <value>Desactivado</value>
-  </data>
-  <data name="VideoRangeType_Chapters" xml:space="preserve">
-    <value>Capitulos</value>
-  </data>
-  <data name="VideoRangeType_Frames" xml:space="preserve">
-    <value>Fotogramas</value>
-  </data>
-  <data name="VideoRangeType_Seconds" xml:space="preserve">
-    <value>Intervalo de tiempo</value>
+	<data name="PlaySourceDisabledNotFoundToolTip" xml:space="preserve">
+    <value>Kaynak dosyası bulunamadı.</value>
   </data>
 </root>
