--- a/VidCoder/Resources/QueueTitlesRes.tr.resx
+++ b/VidCoder/Resources/QueueTitlesRes.tr.resx
@@ -117,98 +117,43 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Anamorphic_Custom" xml:space="preserve">
-    <value>Personalizar</value>
+  <data name="OverrideTitleNumberToolTip" xml:space="preserve">
+    <value>Seçili olduğunda normal başlık oluşturmayı genel geçer çıktı dosyası ismi oluşturma amacıyla etkisiz kılar. Örneğin başlıklar 2, 3 ile 4 ve  genel geçer isim 7 olsun, başlıklar 7, 8 ve 9 olarak etiketlenir. TV dizilerinin disk kopyalanması sırasında yararlı olabilir.</value>
   </data>
-  <data name="Anamorphic_Loose" xml:space="preserve">
-    <value>Loose</value>
+  <data name="QueueTitlesWindowHeader" xml:space="preserve">
+    <value>Görev sırasına eklemek için birden fazla başlık seçiniz.</value>
   </data>
-  <data name="Anamorphic_None" xml:space="preserve">
-    <value>Ninguno</value>
+  <data name="PlaySourceToolTip" xml:space="preserve">
+    <value>Desteklenen bir oynatıcı (VLC veya Media Player Classic Home Cinema) yüklüyse, DVD'leri tek tek önizleyebilirsiniz</value>
   </data>
-  <data name="Anamorphic_Strict" xml:space="preserve">
-    <value>Strict</value>
+  <data name="PlaySourceButton" xml:space="preserve">
+    <value>Kaynak Videoyu Oynat</value>
   </data>
-  <data name="Custom" xml:space="preserve">
-    <value>Personalizar</value>
+  <data name="LengthRangePre" xml:space="preserve">
+    <value>Tüm başlıkların kaynağı</value>
+    <comment>Goes before the first number box in the length range specification.</comment>
   </data>
-  <data name="Decomb_Bob" xml:space="preserve">
-    <value>Bob</value>
+  <data name="LengthRangeMid" xml:space="preserve">
+    <value>hedef</value>
+    <comment>Goes in between the two number boxes in the length range specification.</comment>
   </data>
-  <data name="Decomb_Fast" xml:space="preserve">
-    <value>Fast</value>
+  <data name="LengthRangePost" xml:space="preserve">
+    <value>dakika</value>
+    <comment>Goes after the second number box in the length range specification.</comment>
   </data>
-  <data name="Default" xml:space="preserve">
-    <value>Predeterminado</value>
+  <data name="OverrideTitleCheckBox">
+    <value xml:space="preserve">Genel geçer başlık #: başlangıç</value>
   </data>
-  <data name="Deinterlace_Bob" xml:space="preserve">
-    <value>Bob</value>
-    <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
+  <data name="OverrideNameFormatCheckBox">
+    <value xml:space="preserve">Genel geçer adlandırma biçimi:</value>
   </data>
-  <data name="Deinterlace_Fast" xml:space="preserve">
-    <value>Fast</value>
+  <data name="QueueTitlesDialogTitle">
+    <value xml:space="preserve">Çoklu Başlığı Görev Sırasına Al</value>
   </data>
-  <data name="Deinterlace_Slow" xml:space="preserve">
-    <value>Slow</value>
+  <data name="TitleFormat">
+    <value xml:space="preserve">Başlık {0}</value>
   </data>
-  <data name="Deinterlace_Slower" xml:space="preserve">
-    <value>Slower</value>
-  </data>
-  <data name="DenoisePreset_Light" xml:space="preserve">
-    <value>Ligero</value>
-  </data>
-  <data name="DenoisePreset_Medium" xml:space="preserve">
-    <value>Medio</value>
-  </data>
-  <data name="DenoisePreset_Strong" xml:space="preserve">
-    <value>Intenso</value>
-  </data>
-  <data name="DenoisePreset_Ultralight" xml:space="preserve">
-    <value>Ultrasuave</value>
-  </data>
-  <data name="DenoiseTune_Animation" xml:space="preserve">
-    <value>Animación</value>
-  </data>
-  <data name="DenoiseTune_Film" xml:space="preserve">
-    <value>Película</value>
-  </data>
-  <data name="DenoiseTune_Grain" xml:space="preserve">
-    <value>Grano</value>
-  </data>
-  <data name="DenoiseTune_HighMotion" xml:space="preserve">
-    <value>Alto movimiento</value>
-  </data>
-  <data name="Denoise_HQDN3D" xml:space="preserve">
-    <value>HQDN3D</value>
-  </data>
-  <data name="Denoise_NLMeans" xml:space="preserve">
-    <value>Promedio no local (NL-Means)</value>
-  </data>
-  <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
-    <value>No hacer nada</value>
-  </data>
-  <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
-    <value>Expulsar {0}:</value>
-  </data>
-  <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
-    <value>Log off</value>
-  </data>
-  <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
-    <value>Apagar</value>
-  </data>
-  <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
-    <value>Suspender</value>
-  </data>
-  <data name="Off" xml:space="preserve">
-    <value>Desactivado</value>
-  </data>
-  <data name="VideoRangeType_Chapters" xml:space="preserve">
-    <value>Capitulos</value>
-  </data>
-  <data name="VideoRangeType_Frames" xml:space="preserve">
-    <value>Fotogramas</value>
-  </data>
-  <data name="VideoRangeType_Seconds" xml:space="preserve">
-    <value>Intervalo de tiempo</value>
+	<data name="OverrideDirectoryCheckBox" xml:space="preserve">
+    <value>Genel geçer dizin:</value>
   </data>
 </root>
