--- a/VidCoder/Resources/SubtitleRes.tr.resx
+++ b/VidCoder/Resources/SubtitleRes.tr.resx
@@ -117,98 +117,61 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Anamorphic_Custom" xml:space="preserve">
-    <value>Personalizar</value>
+  <data name="SubtitlesWindowTitle" xml:space="preserve">
+    <value>Altyazılar</value>
   </data>
-  <data name="Anamorphic_Loose" xml:space="preserve">
-    <value>Loose</value>
+  <data name="RemoveSubtitleTrack" xml:space="preserve">
+    <value>Bu hattı kaldır</value>
   </data>
-  <data name="Anamorphic_None" xml:space="preserve">
-    <value>Ninguno</value>
+  <data name="SubtitlesFromSourceLabel" xml:space="preserve">
+    <value>Altyazı kaynağı:</value>
   </data>
-  <data name="Anamorphic_Strict" xml:space="preserve">
-    <value>Strict</value>
+  <data name="QuickTimeSubtitlesWarning" xml:space="preserve">
+    <value>.m4v uzantısı kullanılmazsa altyazılar Quicktime'da görüntülenemeyebilir.</value>
   </data>
-  <data name="Custom" xml:space="preserve">
-    <value>Personalizar</value>
+  <data name="NameColumn" xml:space="preserve">
+    <value>Ad</value>
   </data>
-  <data name="Decomb_Bob" xml:space="preserve">
-    <value>Bob</value>
+  <data name="DefaultColumn" xml:space="preserve">
+    <value>Varsayılan</value>
   </data>
-  <data name="Decomb_Fast" xml:space="preserve">
-    <value>Fast</value>
+  <data name="ForcedOnlyColumn" xml:space="preserve">
+    <value>Sadece zorunlu altyazı</value>
   </data>
-  <data name="Default" xml:space="preserve">
-    <value>Predeterminado</value>
+  <data name="BurnedInColumn" xml:space="preserve">
+    <value>Gömülü altyazıyı ekle</value>
   </data>
-  <data name="Deinterlace_Bob" xml:space="preserve">
-    <value>Bob</value>
-    <comment>A deinterlace method named "Bob". The original name most likely refers to an object bobbing up and down.</comment>
+  <data name="ExternalSubtitlesLabel" xml:space="preserve">
+    <value>Harici altyazılar:</value>
   </data>
-  <data name="Deinterlace_Fast" xml:space="preserve">
-    <value>Fast</value>
+  <data name="FileColumn" xml:space="preserve">
+    <value>Dosya</value>
   </data>
-  <data name="Deinterlace_Slow" xml:space="preserve">
-    <value>Slow</value>
+  <data name="LanguageColumn" xml:space="preserve">
+    <value>Dil</value>
   </data>
-  <data name="Deinterlace_Slower" xml:space="preserve">
-    <value>Slower</value>
+  <data name="CharCodeColumn" xml:space="preserve">
+    <value>Karakter Kodu</value>
   </data>
-  <data name="DenoisePreset_Light" xml:space="preserve">
-    <value>Ligero</value>
+  <data name="OffsetColumn" xml:space="preserve">
+    <value>Ofset (ms)</value>
   </data>
-  <data name="DenoisePreset_Medium" xml:space="preserve">
-    <value>Medio</value>
+  <data name="ImportSrtButton" xml:space="preserve">
+    <value>.srt dosyasını içe aktar...</value>
   </data>
-  <data name="DenoisePreset_Strong" xml:space="preserve">
-    <value>Intenso</value>
+  <data name="BurnedOverlapWarning" xml:space="preserve">
+    <value>Diğer altyazı hatları gömülü altyazılarla çakışacaktır.</value>
   </data>
-  <data name="DenoisePreset_Ultralight" xml:space="preserve">
-    <value>Ultrasuave</value>
+  <data name="ForeignAudioSearch" xml:space="preserve">
+    <value>Yabancı Ses Araması</value>
   </data>
-  <data name="DenoiseTune_Animation" xml:space="preserve">
-    <value>Animación</value>
+  <data name="AddSourceNoSubtitlesToolTip" xml:space="preserve">
+    <value>Kaynak video üzerinde altyazı yok.</value>
   </data>
-  <data name="DenoiseTune_Film" xml:space="preserve">
-    <value>Película</value>
+  <data name="SrtFilePickerText" xml:space="preserve">
+    <value>Altyazı dosyası ekle</value>
   </data>
-  <data name="DenoiseTune_Grain" xml:space="preserve">
-    <value>Grano</value>
-  </data>
-  <data name="DenoiseTune_HighMotion" xml:space="preserve">
-    <value>Alto movimiento</value>
-  </data>
-  <data name="Denoise_HQDN3D" xml:space="preserve">
-    <value>HQDN3D</value>
-  </data>
-  <data name="Denoise_NLMeans" xml:space="preserve">
-    <value>Promedio no local (NL-Means)</value>
-  </data>
-  <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
-    <value>No hacer nada</value>
-  </data>
-  <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
-    <value>Expulsar {0}:</value>
-  </data>
-  <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
-    <value>Log off</value>
-  </data>
-  <data name="EncodeCompleteActionType_Shutdown" xml:space="preserve">
-    <value>Apagar</value>
-  </data>
-  <data name="EncodeCompleteActionType_Sleep" xml:space="preserve">
-    <value>Suspender</value>
-  </data>
-  <data name="Off" xml:space="preserve">
-    <value>Desactivado</value>
-  </data>
-  <data name="VideoRangeType_Chapters" xml:space="preserve">
-    <value>Capitulos</value>
-  </data>
-  <data name="VideoRangeType_Frames" xml:space="preserve">
-    <value>Fotogramas</value>
-  </data>
-  <data name="VideoRangeType_Seconds" xml:space="preserve">
-    <value>Intervalo de tiempo</value>
+	<data name="DuplicateSubtitleTrack" xml:space="preserve">
+    <value>Bu altyazı hattını çoğalt</value>
   </data>
 </root>
