--- a/VidCoder/Resources/Translations/EncodeDetailsRes.es.resx
+++ b/VidCoder/Resources/Translations/EncodeDetailsRes.es.resx
@@ -105,7 +105,7 @@
     <value>Cola</value>
   </data>
 	<data name="ScanPassLabel" xml:space="preserve">
-    <value>Pasada de análisis:</value>
+    <value>Pasada de escaneado:</value>
   </data>
 	<data name="FirstPassLabel" xml:space="preserve">
     <value>Primera pasada:</value>
