--- a/VidCoder/Resources/Translations/EnumsRes.es.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.es.resx
@@ -161,10 +161,10 @@
     <value>Medio</value>
   </data>
   <data name="DenoisePreset_Strong" xml:space="preserve">
-    <value>Fuerte</value>
+    <value>Intenso</value>
   </data>
   <data name="DenoisePreset_Ultralight" xml:space="preserve">
-    <value>Ultraligero</value>
+    <value>Ultrasuave</value>
   </data>
   <data name="DenoiseTune_Animation" xml:space="preserve">
     <value>Animación</value>
@@ -178,8 +178,12 @@
   <data name="DenoiseTune_HighMotion" xml:space="preserve">
     <value>Alto movimiento</value>
   </data>
-  
-  
+  <data name="Denoise_HQDN3D" xml:space="preserve">
+    <value>HQDN3D</value>
+  </data>
+  <data name="Denoise_NLMeans" xml:space="preserve">
+    <value>Promedio no local (NL-Means)</value>
+  </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>No hacer nada</value>
   </data>
