--- a/Lib/fonts/conf.d/README
+++ b/Lib/fonts/conf.d/README
@@ -2,9 +2,9 @@ conf.d/README
 
 Each file in this directory is a fontconfig configuration file.  Fontconfig
 scans this directory, loading all files of the form [0-9][0-9]*.conf.
-These files are normally installed in ../conf.avail and then symlinked here,
-allowing them to be easily installed and then enabled/disabled by adjusting
-the symlinks.
+These files are normally installed in /home/handbrake/jenkins/workspace/WindowsCLI64/HandBrake/build/contrib/share/fontconfig/conf.avail
+and then symlinked here, allowing them to be easily installed and then
+enabled/disabled by adjusting the symlinks.
 
 The files are loaded in numeric order, the structure of the configuration
 has led to the following conventions in usage:
