Now when choosing a preset in a picker, the preset is chosen in the main UI and locked. This keeps the UI in sync with the output and avoids confusion about what the feature is doing.

--- a/VidCoder/Resources/PickerRes.resx
+++ b/VidCoder/Resources/PickerRes.resx
@@ -193,4 +193,7 @@
     <value>The arguments to pass to the program. Use {file} for the file output path.</value>
     <comment>Tool tip for the post-encode arguments UI. Do not translate {file} .</comment>
   </data>
+  <data name="PresetDisabledForPickerToolTip" xml:space="preserve">
+    <value>Picker has specified the encoding preset.</value>
+  </data>
 </root>
