Overhauled audio and subtitle selection. Allows specifying multiple languages and more flexibility in setting the default subtitle.

--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -276,4 +276,7 @@ A full copy of the GNU General Public License has been included along with this 
     <value>VidCoder Queue File</value>
     <comment>File dialog description of a .vjqueue file: JSON file that stores an exported queue.</comment>
   </data>
+  <data name="First" xml:space="preserve">
+    <value>First</value>
+  </data>
 </root>
