Added a warning when there are a lot of titles with a similar duration. This helps identify discs authored with a bunch of phony titles and chapters mixed up.

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -644,4 +644,7 @@
     <value>preset</value>
     <comment>Will be inserted into sentences that refer to a preset</comment>
   </data>
+  <data name="SimilarTitlesToolTip" xml:space="preserve">
+    <value>{0} other titles have a duration close to this one.</value>
+  </data>
 </root>
