--- a/VidCoder/Resources/EncodingRes.resx
+++ b/VidCoder/Resources/EncodingRes.resx
@@ -931,27 +931,8 @@ Bicubic: This is an OpenCL hardware accelerated scaling algorithm.</value>
   <data name="AudioEncoder_Passthrough" xml:space="preserve">
     <value>Passthrough</value>
   </data>
-  <data name="Passthrough_aac" xml:space="preserve">
-    <value>AAC</value>
-  </data>
-  <data name="Passthrough_ac3" xml:space="preserve">
-    <value>AC3</value>
-  </data>
-  <data name="Passthrough_any" xml:space="preserve">
-    <value>Any</value>
-    <comment>Choice for a passthrough which accepts any input codec.</comment>
-  </data>
-  <data name="Passthrough_dts" xml:space="preserve">
-    <value>DTS</value>
-  </data>
-  <data name="Passthrough_dtshd" xml:space="preserve">
-    <value>DTS-HD</value>
-  </data>
-  <data name="Passthrough_mp3" xml:space="preserve">
-    <value>MP3</value>
-  </data>
-  <data name="ScopeLabel" xml:space="preserve">
-    <value>Scope:</value>
+  <data name="Passthrough_auto" xml:space="preserve">
+    <value>Auto</value>
   </data>
   <data name="PassthroughScopeToolTip" xml:space="preserve">
     <value>Specifies which input codecs the passthrough will apply to.</value>
@@ -1002,16 +983,34 @@ Bicubic: This is an OpenCL hardware accelerated scaling algorithm.</value>
     <value>Chapter {0}</value>
     <comment>What a chapter will be named when not given a custom name. {0} is the chapter number.</comment>
   </data>
+  <data name="PassthroughSettingsLabel" xml:space="preserve">
+    <value>Passthrough Settings</value>
+  </data>
+  <data name="PassthroughMaskLabel" xml:space="preserve">
+    <value>Allow passthrough for:</value>
+  </data>
+  <data name="Passthrough_aac" xml:space="preserve">
+    <value>AAC</value>
+  </data>
+  <data name="Passthrough_ac3" xml:space="preserve">
+    <value>AC3</value>
+  </data>
+  <data name="Passthrough_dts" xml:space="preserve">
+    <value>DTS</value>
+  </data>
+  <data name="Passthrough_dtshd" xml:space="preserve">
+    <value>DTS-HD</value>
+  </data>
   <data name="Passthrough_eac3" xml:space="preserve">
     <value>E-AC3</value>
   </data>
   <data name="Passthrough_flac" xml:space="preserve">
     <value>FLAC</value>
   </data>
+  <data name="Passthrough_mp3" xml:space="preserve">
+    <value>MP3</value>
+  </data>
   <data name="Passthrough_truehd" xml:space="preserve">
     <value>TrueHD</value>
-  </data>
-  <data name="PassthroughSettingsLabel" xml:space="preserve">
-    <value>Passthrough Settings</value>
   </data>
 </root>
